<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fgbackground3"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    tools:context="com.codingmortals.learncodeonline.activities.SplashActivity"
    android:id="@+id/constraintLayout">
    <ImageView
        android:layout_marginTop="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:text="@string/register"
        android:id="@+id/tvRegister"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etlName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            app:hintTextAppearance="@style/TextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etName"
                style="@style/AppTheme.EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@mipmap/ic_contact"
                android:drawableRight="@mipmap/ic_contact"
                android:hint="Name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etlEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            app:hintTextAppearance="@style/TextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/AppTheme.EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@mipmap/ic_email"
                android:drawableRight="@mipmap/ic_email"
                android:hint="Email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etlPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            app:hintTextAppearance="@style/TextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/AppTheme.EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@mipmap/ic_password"
                android:drawableRight="@mipmap/ic_password"
                android:hint="Password"
                android:inputType="textPassword"
                app:hintTextAppearance="@style/TextLabel" />
        </android.support.design.widget.TextInputLayout>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bSignUp"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonbg"
        android:maxWidth="100dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/bottomtextlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textSize="16sp" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/bSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>
